<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/orders"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@color/buttonColor"
        android:onClick="onClickOrders"
        android:text="@string/orders"
        android:textColor="@color/background"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/currentOrders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toEndOf="@+id/products"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/currentOrders"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@color/buttonColor"
        android:onClick="onClickCurrentOrders"
        android:text="@string/activeOrders"
        android:textColor="@color/background"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toEndOf="@+id/products"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76" />

    <Button
        android:id="@+id/products"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@color/buttonColor"
        android:onClick="onClickProducts"
        android:text="@string/products"
        android:textColor="@color/background"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/clients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.949" />

    <Button
        android:id="@+id/clients"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@color/buttonColor"
        android:onClick="onClickClients"
        android:text="@string/clients"
        android:textColor="@color/background"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761" />

    <Button
        android:id="@+id/reports"
        android:layout_width="310dp"
        android:layout_height="100dp"
        android:background="@color/buttonColor"
        android:onClick="onClickReports"
        android:text="@string/reports"
        android:textColor="@color/background"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentOrders"
        app:layout_constraintVertical_bias="0.51" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/buttonColor"
        android:textSize="60sp"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintBottom_toTopOf="@+id/products"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>